@@ -1,3 +1,6 @@
+2020-05-11      3.6004  Data updates;
+                        Improved doco on the data update policy :-)
+
 2020-04-27      3.6003  Testing improvements for fork()ing code;
                         Data updates
 
